--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,3 +1,15 @@
+/* ************************************************************************** */
+/*                                                                            */
+/*                                                        :::      ::::::::   */
+/*   Makefile                                           :+:      :+:    :+:   */
+/*                                                    +:+ +:+         +:+     */
+/*   By: akostrik <akostrik@student.42.fr>          +#+  +:+       +#+        */
+/*                                                +#+#+#+#+#+   +#+           */
+/*   Created: 2023/02/24 11:56:54 by akostrik          #+#    #+#             */
+/*   Updated: 2023/07/23 16:14:01 by akostrik         ###   ########.fr       */
+/*                                                                            */
+/* ************************************************************************** */
+
 SRC  =	main.c utils1.c utils2.c
 OBJ  = $(SRC:.c=.o)
 OBJ := $(addprefix ./objs/, $(OBJ))
@@ -20,11 +32,6 @@ fclean: clean
 	@rm -f philo
 
 re: fclean all
-
-git:
-	git add *
-	git commit -m "philo"
-	git push
 
 norme:
 	norminette $(SRC)
